--- a/templates/base.html
+++ b/templates/base.html
@@ -58,13 +58,25 @@
             background-color: #0056b3;
             color: #fff;
         }
+
+        footer {
+            background-color: #585d62;
+            color: white;
+            text-align: center;
+            padding: 8px 0;
+            position: fixed;
+            bottom: 0;
+            width: 100%;
+        }
+
+    
     </style>
 </head>
 
 <body>
     <div class="menu">
         <div class="logo">
-            🔐  Control Access System
+            🔐 Control Access System
         </div>
         <ul>
             <li><a href="/" class="menu-link">Home</a></li>
@@ -74,6 +86,9 @@
             <li><a href="/mac" class="menu-link">MAC</a></li> -->
         </ul>
     </div>
+    <footer>
+        &copy; Ayat | 2024 Access Control System. All rights reserved.
+    </footer>
     {% block content %}
     <div class="container">
 
