--- a/templates/base.html
+++ b/templates/base.html
@@ -10,19 +10,17 @@
         body {
             margin: 0;
             padding: 0;
-
         }
 
         .menu {
             background-color: #e8ecf0;
-            padding: 20px 20px;
+            padding: 20px;
             display: flex;
             justify-content: space-between;
             align-items: center;
             font-weight: bolder;
-            margin-bottom: 10rem;
             box-shadow: 1px 1px 9px 0px #8989b0;
-
+            margin-bottom: 2rem; /* Reduced margin */
         }
 
         .logo {
@@ -30,7 +28,6 @@
             margin-right: 20px;
             color: #0056b3;
             text-shadow: 1px 1px 1px #764ba2;
-
         }
 
         .menu ul {
@@ -38,6 +35,7 @@
             margin: 0;
             padding: 0;
             display: flex;
+            flex-wrap: wrap; /* Allow menu items to wrap to the next line */
         }
 
         .menu li {
@@ -45,13 +43,11 @@
         }
 
         .menu-link {
-            /* color: #466bdb; */
             text-decoration: none;
             padding: 10px 20px;
             border-radius: 5px;
             transition: background-color 0.3s;
             color: #0056b3;
-
         }
 
         .menu-link:hover {
@@ -69,7 +65,22 @@
             width: 100%;
         }
 
-    
+        /* Media query for smaller screens */
+        @media screen and (max-width: 768px) {
+            .menu {
+                flex-direction: column; /* Stack menu items vertically */
+                align-items: flex-start; /* Align items to the start */
+                padding: 10px; /* Reduce padding */
+            }
+
+            .menu ul {
+                margin-top: 10px; /* Add space between logo and menu items */
+            }
+
+            .menu li {
+                margin: 5px 0; /* Adjust margin for smaller screens */
+            }
+        }
     </style>
 </head>
 
