update user resource

--- a/templates/abac.html
+++ b/templates/abac.html
@@ -94,7 +94,7 @@
             <label for="resource">Resource:</label>
             <select id="resource" name="resource" required>
                 <option value="files">Files</option>
-                <option value="records">Records</option>
+                <option value="videos">videos</option>
             </select>
 
             <input type="submit" value="Check Access">
